# gitar

./: .gitignore  Cargo.toml  README.md  changelog.md  file.txt  gitai.py  llm.py  requirements.txt
.github/workflows/: ci.yml
src/: cli.rs  client.rs  config.rs  diff.rs  gemini.rs  git.rs  main.rs  openai.rs  prompts.rs  tests.rs  types.rs
src/commands/: admin.rs  changelog.rs  commit.rs  config.rs  diff.rs  explain.rs  history.rs  hook.rs  mod.rs  models.rs  pr.rs  version.rs
src/providers/: claude.rs  gemini.rs  mod.rs  openai.rs
