[package]
name = "gitar"
version = "1.0.6"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.13", features = ["json", "socks", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
toml = "0.9.8"
dirs = "6"
futures-util = "0.3.31"
